# swagger_output.json
@@ -166,9 +166,6 @@
                 "type_car": {
                   "example": "any"
                 },
-                "price": {
-                  "example": "any"
-                },
                 "seats": {
                   "example": "any"
                 },
@@ -176,6 +173,12 @@
                   "example": "any"
                 },
                 "transmision": {
+                  "example": "any"
+                },
+                "price_day": {
+                  "example": "any"
+                },
+                "prices_hour": {
                   "example": "any"
                 }
               }
@@ -224,9 +227,6 @@
                 "description": {
                   "example": "any"
                 },
-                "price": {
-                  "example": "any"
-                },
                 "seats": {
                   "example": "any"
                 },
@@ -237,6 +237,12 @@
                   "example": "any"
                 },
                 "transmision": {
+                  "example": "any"
+                },
+                "price_day": {
+                  "example": "any"
+                },
+                "prices_hour": {
                   "example": "any"
                 }
               }
@@ -420,6 +426,32 @@
         ]
       }
     },
+    "/orders/{id}/payment": {
+      "get": {
+        "description": "",
+        "parameters": [
+          {
+            "name": "id",
+            "in": "path",
+            "required": true,
+            "type": "string"
+          },
+          {
+            "name": "authorization",
+            "in": "header",
+            "type": "string"
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "OK"
+          },
+          "500": {
+            "description": "Internal Server Error"
+          }
+        }
+      }
+    },
     "/orders/{id}/done": {
       "get": {
         "description": "",
@@ -484,6 +516,15 @@
                 },
                 "car_id": {
                   "example": "any"
+                },
+                "rent_type": {
+                  "example": "any"
+                },
+                "rent_hour_id": {
+                  "example": "any"
+                },
+                "payment_type": {
+                  "example": "any"
                 }
               }
             }
@@ -492,73 +533,6 @@
         "responses": {
           "201": {
             "description": "Created"
-          },
-          "500": {
-            "description": "Internal Server Error"
-          }
-        },
-        "security": [
-          {
-            "Bearer": []
-          }
-        ]
-      }
-    },
-    "/orders/{id}/update": {
-      "put": {
-        "description": "",
-        "parameters": [
-          {
-            "name": "id",
-            "in": "path",
-            "required": true,
-            "type": "string"
-          },
-          {
-            "name": "authorization",
-            "in": "header",
-            "type": "string"
-          },
-          {
-            "name": "body",
-            "in": "body",
-            "schema": {
-              "type": "object",
-              "properties": {
-                "name_rent": {
-                  "example": "any"
-                },
-                "no_ktp": {
-                  "example": "any"
-                },
-                "address": {
-                  "example": "any"
-                },
-                "phone": {
-                  "example": "any"
-                },
-                "rental_purposes": {
-                  "example": "any"
-                },
-                "start_date": {
-                  "example": "any"
-                },
-                "end_date": {
-                  "example": "any"
-                },
-                "status": {
-                  "example": "any"
-                },
-                "car_id": {
-                  "example": "any"
-                }
-              }
-            }
-          }
-        ],
-        "responses": {
-          "200": {
-            "description": "OK"
           },
           "500": {
             "description": "Internal Server Error"
@@ -600,6 +574,20 @@
             "Bearer": []
           }
         ]
+      }
+    },
+    "/midtrans/notifications": {
+      "post": {
+        "description": "",
+        "parameters": [],
+        "responses": {
+          "200": {
+            "description": "OK"
+          },
+          "500": {
+            "description": "Internal Server Error"
+          }
+        }
       }
     },
     "/{orders{where{id:Number(id)}": {
